[package]
name = "oct-token"
version = "0.1.0"
authors = ["Cdot Network <zhanglong@cdot.network>"]
edition = "2018"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
near-sdk = { git = "https://github.com/near/near-sdk-rs", rev = "ff38c945dc6dd1f2b8e895ef94d92b1aaaefd11c" }
near-contract-standards = { git = "https://github.com/near/near-sdk-rs", rev = "ff38c945dc6dd1f2b8e895ef94d92b1aaaefd11c" }

[profile.release]
codegen-units = 1
# Tell `rustc` to optimize for small code size.
opt-level = "z"
lto = true
debug = false
panic = "abort"
overflow-checks = true